tests/paczka1/fuzzy1/83530120.err
Error in line 1: RlRtmengj S876 72,1
Error in line 3: 9EnMwE2H6I6 S303 97,9
Error in line 2: RlRtmengj S303 93,3
Error in line 7: RlRtmengj S876 38,9
Error in line 12: svghk S876 63,7
Error in line 8: RlRtmengj S303 91,7
Error in line 20: KSECd9SRCIB S303 64,2
Error in line 18: S876 S876 8,5
Error in line 25: S876 S327 67,7
Error in line 35: 9EnMwE2H6I6 S303 9,6
